// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cursor via GrahpQL after + before + filter + offset: first 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsemE1MTAiXSxbImlkIiwiOTgiXV19",
          "node": Object {
            "firstname": "Elza",
            "id": "98",
            "lastname": "Gorczany",
            "username": "elza510",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsbGEzNzciXSxbImlkIiwiMTAzIl1dfQ==",
          "node": Object {
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
      ],
      "resultCount": 2,
      "totalCount": 9,
    },
  },
}
`;

exports[`cursor via GrahpQL after + before + filter + offset: found after 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVzdGVsbDY4NCJdLFsiaWQiLCI3MCJdXX0=",
          "node": Object {
            "firstname": "Estell",
            "id": "70",
            "lastname": "Waters",
            "username": "estell684",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL after + before + filter + offset: found before 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVkd2FyZDk2OSJdLFsiaWQiLCI4Il1dfQ==",
          "node": Object {
            "firstname": "Edward",
            "id": "8",
            "lastname": "Dach",
            "username": "edward969",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL after + before + filter + offset: last 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVtaWxpYTE4OSJdLFsiaWQiLCI5MCJdXX0=",
          "node": Object {
            "firstname": "Emilia",
            "id": "90",
            "lastname": "Marks",
            "username": "emilia189",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVtZWxpZTU3OCJdLFsiaWQiLCI1MyJdXX0=",
          "node": Object {
            "firstname": "Emelie",
            "id": "53",
            "lastname": "Schamberger",
            "username": "emelie578",
          },
        },
      ],
      "resultCount": 2,
      "totalCount": 9,
    },
  },
}
`;

exports[`cursor via GrahpQL after + filter: found 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsbGEzNzciXSxbImlkIiwiMTAzIl1dfQ==",
          "node": Object {
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL after + filter: result 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsemE1MTAiXSxbImlkIiwiOTgiXV19",
          "node": Object {
            "firstname": "Elza",
            "id": "98",
            "lastname": "Gorczany",
            "username": "elza510",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVtZWxpZTU3OCJdLFsiaWQiLCI1MyJdXX0=",
          "node": Object {
            "firstname": "Emelie",
            "id": "53",
            "lastname": "Schamberger",
            "username": "emelie578",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVtaWxpYTE4OSJdLFsiaWQiLCI5MCJdXX0=",
          "node": Object {
            "firstname": "Emilia",
            "id": "90",
            "lastname": "Marks",
            "username": "emilia189",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVtbWV0NzQxIl0sWyJpZCIsIjEyIl1dfQ==",
          "node": Object {
            "firstname": "Emmet",
            "id": "12",
            "lastname": "Boyle",
            "username": "emmet741",
          },
        },
      ],
      "resultCount": 4,
      "totalCount": 9,
    },
  },
}
`;

exports[`cursor via GrahpQL after: found 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFtYWxpYTk0MyJdLFsiaWQiLCI2NSJdXX0=",
          "node": Object {
            "firstname": "Amalia",
            "id": "65",
            "lastname": "Stamm",
            "username": "amalia943",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL after: result 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFuZ2VsaW5lNDQ3Il0sWyJpZCIsIjM5Il1dfQ==",
          "node": Object {
            "firstname": "Angeline",
            "id": "39",
            "lastname": "Tremblay",
            "username": "angeline447",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFubmFiZWw3MTEiXSxbImlkIiwiMSJdXX0=",
          "node": Object {
            "firstname": "Annabel",
            "id": "1",
            "lastname": "Bergstrom",
            "username": "annabel711",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFubmU3NTAiXSxbImlkIiwiODQiXV19",
          "node": Object {
            "firstname": "Anne",
            "id": "84",
            "lastname": "Wyman",
            "username": "anne750",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFudG9uZTM0NyJdLFsiaWQiLCI2OSJdXX0=",
          "node": Object {
            "firstname": "Antone",
            "id": "69",
            "lastname": "Schmitt",
            "username": "antone347",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFudG9uaWE5MTkiXSxbImlkIiwiNDYiXV19",
          "node": Object {
            "firstname": "Antonia",
            "id": "46",
            "lastname": "Gutkowski",
            "username": "antonia919",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFudG9uaW5hNDQ4Il0sWyJpZCIsIjk5Il1dfQ==",
          "node": Object {
            "firstname": "Antonina",
            "id": "99",
            "lastname": "Lesch",
            "username": "antonina448",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFueWE1NDMiXSxbImlkIiwiMiJdXX0=",
          "node": Object {
            "firstname": "Anya",
            "id": "2",
            "lastname": "Conn",
            "username": "anya543",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFyYWNlbGk3OTQiXSxbImlkIiwiMjYiXV19",
          "node": Object {
            "firstname": "Araceli",
            "id": "26",
            "lastname": "Lind",
            "username": "araceli794",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFybGllMTI4Il0sWyJpZCIsIjM0Il1dfQ==",
          "node": Object {
            "firstname": "Arlie",
            "id": "34",
            "lastname": "Kemmer",
            "username": "arlie128",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImF0aGVuYTU1NyJdLFsiaWQiLCIxNSJdXX0=",
          "node": Object {
            "firstname": "Athena",
            "id": "15",
            "lastname": "Stamm",
            "username": "athena557",
          },
        },
      ],
      "resultCount": 10,
      "totalCount": 110,
    },
  },
}
`;

exports[`cursor via GrahpQL before + filter: found 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVtaWxpYTE4OSJdLFsiaWQiLCI5MCJdXX0=",
          "node": Object {
            "firstname": "Emilia",
            "id": "90",
            "lastname": "Marks",
            "username": "emilia189",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL before + filter: result 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVkd2FyZDk2OSJdLFsiaWQiLCI4Il1dfQ==",
          "node": Object {
            "firstname": "Edward",
            "id": "8",
            "lastname": "Dach",
            "username": "edward969",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsYWRpbzgzMiJdLFsiaWQiLCI1OCJdXX0=",
          "node": Object {
            "firstname": "Eladio",
            "id": "58",
            "lastname": "Botsford",
            "username": "eladio832",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsbGEzNzciXSxbImlkIiwiMTAzIl1dfQ==",
          "node": Object {
            "firstname": "Ella",
            "id": "103",
            "lastname": "Roberts",
            "username": "ella377",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImVsemE1MTAiXSxbImlkIiwiOTgiXV19",
          "node": Object {
            "firstname": "Elza",
            "id": "98",
            "lastname": "Gorczany",
            "username": "elza510",
          },
        },
      ],
      "resultCount": 4,
      "totalCount": 9,
    },
  },
}
`;

exports[`cursor via GrahpQL before: found 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFtYWxpYTk0MyJdLFsiaWQiLCI2NSJdXX0=",
          "node": Object {
            "firstname": "Amalia",
            "id": "65",
            "lastname": "Stamm",
            "username": "amalia943",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL before: result 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFpZGEyODUiXSxbImlkIiwiMjQiXV19",
          "node": Object {
            "firstname": "Aida",
            "id": "24",
            "lastname": "Lakin",
            "username": "aida285",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFsaWNlMTU3Il0sWyJpZCIsIjMxIl1dfQ==",
          "node": Object {
            "firstname": "Alice",
            "id": "31",
            "lastname": "Howell",
            "username": "alice157",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFsdmEyODAiXSxbImlkIiwiNDIiXV19",
          "node": Object {
            "firstname": "Alva",
            "id": "42",
            "lastname": "Jacobson",
            "username": "alva280",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJ1c2VybmFtZSIsImFsdmVyYTcwNyJdLFsiaWQiLCI3MiJdXX0=",
          "node": Object {
            "firstname": "Alvera",
            "id": "72",
            "lastname": "Miller",
            "username": "alvera707",
          },
        },
      ],
      "resultCount": 4,
      "totalCount": 110,
    },
  },
}
`;

exports[`cursor via GrahpQL mutli-key after + before: found after 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJmaXJzdG5hbWUiLCJKb2UiXSxbImxhc3RuYW1lIiwiUmF0a2UiXSxbImlkIiwiMTA0Il1dfQ==",
          "node": Object {
            "firstname": "Joe",
            "id": "104",
            "lastname": "Ratke",
            "username": "joe154",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL mutli-key after + before: found before 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJmaXJzdG5hbWUiLCJKb3NlIl0sWyJsYXN0bmFtZSIsIkxlZmZsZXIiXSxbImlkIiwiNzEiXV19",
          "node": Object {
            "firstname": "Jose",
            "id": "71",
            "lastname": "Leffler",
            "username": "jose821",
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL mutli-key after + before: result 1`] = `
Object {
  "data": Object {
    "allProfiles": Object {
      "edges": Array [
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJmaXJzdG5hbWUiLCJKb2VsIl0sWyJsYXN0bmFtZSIsIkxha2luIl0sWyJpZCIsIjk1Il1dfQ==",
          "node": Object {
            "firstname": "Joel",
            "id": "95",
            "lastname": "Lakin",
            "username": "joel356",
          },
        },
        Object {
          "cursor": "eyJQcm9maWxlIjpbWyJmaXJzdG5hbWUiLCJKb25hdGhvbiJdLFsibGFzdG5hbWUiLCJHdXNpa293c2tpIl0sWyJpZCIsIjY3Il1dfQ==",
          "node": Object {
            "firstname": "Jonathon",
            "id": "67",
            "lastname": "Gusikowski",
            "username": "jonathon586",
          },
        },
      ],
      "resultCount": 2,
      "totalCount": 7,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based after + first: found 1 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNyJdXX0=",
          "node": Object {
            "author": "7",
            "board": "26",
            "content": "velit magnam nobis aspernatur corporis voluptas sed 😀",
            "id": "7",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based after + first: found 2 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNDAiXV19",
          "node": Object {
            "author": "78",
            "board": "30",
            "content": "expedita eveniet dicta deleniti aut distinctio molestiae 😆",
            "id": "40",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based after + first: found 3 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiMjAiXV19",
          "node": Object {
            "author": "54",
            "board": "43",
            "content": "fugiat quis a a debitis et culpa",
            "id": "20",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based after + first: result 1 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiMjAiXV19",
          "node": Object {
            "author": "54",
            "board": "43",
            "content": "fugiat quis a a debitis et culpa",
            "id": "20",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNDAiXV19",
          "node": Object {
            "author": "78",
            "board": "30",
            "content": "expedita eveniet dicta deleniti aut distinctio molestiae 😆",
            "id": "40",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU1NloiXSxbImlkIiwiMzgiXV19",
          "node": Object {
            "author": "88",
            "board": "26",
            "content": "enim vel et rem labore amet recusandae 🙌",
            "id": "38",
            "writtenAt": 2018-03-26T20:47:46.556Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjUxOVoiXSxbImlkIiwiNDgiXV19",
          "node": Object {
            "author": "25",
            "board": "48",
            "content": "deserunt voluptates eum aut libero nam sit 🚀",
            "id": "48",
            "writtenAt": 2018-03-26T20:47:46.519Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQ4MFoiXSxbImlkIiwiNDciXV19",
          "node": Object {
            "author": "28",
            "board": "13",
            "content": "et ut qui eum et consequatur numquam 😆",
            "id": "47",
            "writtenAt": 2018-03-26T20:47:46.480Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQyMloiXSxbImlkIiwiMjkiXV19",
          "node": Object {
            "author": "59",
            "board": "12",
            "content": "ut distinctio sint dolores ut est corrupti",
            "id": "29",
            "writtenAt": 2018-03-26T20:47:46.422Z,
          },
        },
      ],
      "resultCount": 6,
      "totalCount": 50,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based after + first: result 2 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU1NloiXSxbImlkIiwiMzgiXV19",
          "node": Object {
            "author": "88",
            "board": "26",
            "content": "enim vel et rem labore amet recusandae 🙌",
            "id": "38",
            "writtenAt": 2018-03-26T20:47:46.556Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjUxOVoiXSxbImlkIiwiNDgiXV19",
          "node": Object {
            "author": "25",
            "board": "48",
            "content": "deserunt voluptates eum aut libero nam sit 🚀",
            "id": "48",
            "writtenAt": 2018-03-26T20:47:46.519Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQ4MFoiXSxbImlkIiwiNDciXV19",
          "node": Object {
            "author": "28",
            "board": "13",
            "content": "et ut qui eum et consequatur numquam 😆",
            "id": "47",
            "writtenAt": 2018-03-26T20:47:46.480Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQyMloiXSxbImlkIiwiMjkiXV19",
          "node": Object {
            "author": "59",
            "board": "12",
            "content": "ut distinctio sint dolores ut est corrupti",
            "id": "29",
            "writtenAt": 2018-03-26T20:47:46.422Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjA4NFoiXSxbImlkIiwiMTEiXV19",
          "node": Object {
            "author": "65",
            "board": "37",
            "content": "voluptatem vero optio mollitia et qui nihil",
            "id": "11",
            "writtenAt": 2018-03-26T20:47:46.084Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ1Ljg1NFoiXSxbImlkIiwiMTIiXV19",
          "node": Object {
            "author": "88",
            "board": "47",
            "content": "voluptatum eius deleniti et consequatur qui architecto 😀",
            "id": "12",
            "writtenAt": 2018-03-26T20:47:45.854Z,
          },
        },
      ],
      "resultCount": 6,
      "totalCount": 50,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based after + first: result 3 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNDAiXV19",
          "node": Object {
            "author": "78",
            "board": "30",
            "content": "expedita eveniet dicta deleniti aut distinctio molestiae 😆",
            "id": "40",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU1NloiXSxbImlkIiwiMzgiXV19",
          "node": Object {
            "author": "88",
            "board": "26",
            "content": "enim vel et rem labore amet recusandae 🙌",
            "id": "38",
            "writtenAt": 2018-03-26T20:47:46.556Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjUxOVoiXSxbImlkIiwiNDgiXV19",
          "node": Object {
            "author": "25",
            "board": "48",
            "content": "deserunt voluptates eum aut libero nam sit 🚀",
            "id": "48",
            "writtenAt": 2018-03-26T20:47:46.519Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQ4MFoiXSxbImlkIiwiNDciXV19",
          "node": Object {
            "author": "28",
            "board": "13",
            "content": "et ut qui eum et consequatur numquam 😆",
            "id": "47",
            "writtenAt": 2018-03-26T20:47:46.480Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQyMloiXSxbImlkIiwiMjkiXV19",
          "node": Object {
            "author": "59",
            "board": "12",
            "content": "ut distinctio sint dolores ut est corrupti",
            "id": "29",
            "writtenAt": 2018-03-26T20:47:46.422Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjA4NFoiXSxbImlkIiwiMTEiXV19",
          "node": Object {
            "author": "65",
            "board": "37",
            "content": "voluptatem vero optio mollitia et qui nihil",
            "id": "11",
            "writtenAt": 2018-03-26T20:47:46.084Z,
          },
        },
      ],
      "resultCount": 6,
      "totalCount": 50,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based before + last: found 1 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNyJdXX0=",
          "node": Object {
            "author": "7",
            "board": "26",
            "content": "velit magnam nobis aspernatur corporis voluptas sed 😀",
            "id": "7",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based before + last: found 2 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNDAiXV19",
          "node": Object {
            "author": "78",
            "board": "30",
            "content": "expedita eveniet dicta deleniti aut distinctio molestiae 😆",
            "id": "40",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based before + last: found 3 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiMjAiXV19",
          "node": Object {
            "author": "54",
            "board": "43",
            "content": "fugiat quis a a debitis et culpa",
            "id": "20",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 1,
      "totalCount": 1,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based before + last: result 1 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ1Ljg1NFoiXSxbImlkIiwiMTIiXV19",
          "node": Object {
            "author": "88",
            "board": "47",
            "content": "voluptatum eius deleniti et consequatur qui architecto 😀",
            "id": "12",
            "writtenAt": 2018-03-26T20:47:45.854Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjA4NFoiXSxbImlkIiwiMTEiXV19",
          "node": Object {
            "author": "65",
            "board": "37",
            "content": "voluptatem vero optio mollitia et qui nihil",
            "id": "11",
            "writtenAt": 2018-03-26T20:47:46.084Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQyMloiXSxbImlkIiwiMjkiXV19",
          "node": Object {
            "author": "59",
            "board": "12",
            "content": "ut distinctio sint dolores ut est corrupti",
            "id": "29",
            "writtenAt": 2018-03-26T20:47:46.422Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQ4MFoiXSxbImlkIiwiNDciXV19",
          "node": Object {
            "author": "28",
            "board": "13",
            "content": "et ut qui eum et consequatur numquam 😆",
            "id": "47",
            "writtenAt": 2018-03-26T20:47:46.480Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjUxOVoiXSxbImlkIiwiNDgiXV19",
          "node": Object {
            "author": "25",
            "board": "48",
            "content": "deserunt voluptates eum aut libero nam sit 🚀",
            "id": "48",
            "writtenAt": 2018-03-26T20:47:46.519Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU1NloiXSxbImlkIiwiMzgiXV19",
          "node": Object {
            "author": "88",
            "board": "26",
            "content": "enim vel et rem labore amet recusandae 🙌",
            "id": "38",
            "writtenAt": 2018-03-26T20:47:46.556Z,
          },
        },
      ],
      "resultCount": 6,
      "totalCount": 50,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based before + last: result 2 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQyMloiXSxbImlkIiwiMjkiXV19",
          "node": Object {
            "author": "59",
            "board": "12",
            "content": "ut distinctio sint dolores ut est corrupti",
            "id": "29",
            "writtenAt": 2018-03-26T20:47:46.422Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQ4MFoiXSxbImlkIiwiNDciXV19",
          "node": Object {
            "author": "28",
            "board": "13",
            "content": "et ut qui eum et consequatur numquam 😆",
            "id": "47",
            "writtenAt": 2018-03-26T20:47:46.480Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjUxOVoiXSxbImlkIiwiNDgiXV19",
          "node": Object {
            "author": "25",
            "board": "48",
            "content": "deserunt voluptates eum aut libero nam sit 🚀",
            "id": "48",
            "writtenAt": 2018-03-26T20:47:46.519Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU1NloiXSxbImlkIiwiMzgiXV19",
          "node": Object {
            "author": "88",
            "board": "26",
            "content": "enim vel et rem labore amet recusandae 🙌",
            "id": "38",
            "writtenAt": 2018-03-26T20:47:46.556Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNyJdXX0=",
          "node": Object {
            "author": "7",
            "board": "26",
            "content": "velit magnam nobis aspernatur corporis voluptas sed 😀",
            "id": "7",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiMjAiXV19",
          "node": Object {
            "author": "54",
            "board": "43",
            "content": "fugiat quis a a debitis et culpa",
            "id": "20",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 6,
      "totalCount": 50,
    },
  },
}
`;

exports[`cursor via GrahpQL time-based before + last: result 3 1`] = `
Object {
  "data": Object {
    "allMessages": Object {
      "edges": Array [
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjA4NFoiXSxbImlkIiwiMTEiXV19",
          "node": Object {
            "author": "65",
            "board": "37",
            "content": "voluptatem vero optio mollitia et qui nihil",
            "id": "11",
            "writtenAt": 2018-03-26T20:47:46.084Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQyMloiXSxbImlkIiwiMjkiXV19",
          "node": Object {
            "author": "59",
            "board": "12",
            "content": "ut distinctio sint dolores ut est corrupti",
            "id": "29",
            "writtenAt": 2018-03-26T20:47:46.422Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjQ4MFoiXSxbImlkIiwiNDciXV19",
          "node": Object {
            "author": "28",
            "board": "13",
            "content": "et ut qui eum et consequatur numquam 😆",
            "id": "47",
            "writtenAt": 2018-03-26T20:47:46.480Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjUxOVoiXSxbImlkIiwiNDgiXV19",
          "node": Object {
            "author": "25",
            "board": "48",
            "content": "deserunt voluptates eum aut libero nam sit 🚀",
            "id": "48",
            "writtenAt": 2018-03-26T20:47:46.519Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU1NloiXSxbImlkIiwiMzgiXV19",
          "node": Object {
            "author": "88",
            "board": "26",
            "content": "enim vel et rem labore amet recusandae 🙌",
            "id": "38",
            "writtenAt": 2018-03-26T20:47:46.556Z,
          },
        },
        Object {
          "cursor": "eyJNZXNzYWdlIjpbWyJ3cml0dGVuQXQiLCIyMDE4LTAzLTI2VDIwOjQ3OjQ2LjU3OFoiXSxbImlkIiwiNyJdXX0=",
          "node": Object {
            "author": "7",
            "board": "26",
            "content": "velit magnam nobis aspernatur corporis voluptas sed 😀",
            "id": "7",
            "writtenAt": 2018-03-26T20:47:46.578Z,
          },
        },
      ],
      "resultCount": 6,
      "totalCount": 50,
    },
  },
}
`;

exports[`cursor via connector after + before + filter + offset 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Elza",
      "id": "98",
      "lastname": "Gorczany",
      "password": "c632a6ac63ec64dd2bec50c1535e96d21c7ab3335eb7a5c488326a3ec6c6e430",
      "username": "elza510",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Ella",
      "id": "103",
      "lastname": "Roberts",
      "password": "f056b8cae37dc3ed60ee52da9a2951f8a6c531fe3222a3ad6835dbdd905c7d2a",
      "username": "ella377",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector after + before + filter + offset 2`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Emilia",
      "id": "90",
      "lastname": "Marks",
      "password": "469cc643a19fb75901e5d331b8dc14befa8b98810b246c2fb22fff0c382dc39e",
      "username": "emilia189",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Emelie",
      "id": "53",
      "lastname": "Schamberger",
      "password": "96844bc86a7b7c7f058c0a6ae141c162f33ddfca412f2d5899ead8ee713d7418",
      "username": "emelie578",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`cursor via connector after + filter 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Elza",
      "id": "98",
      "lastname": "Gorczany",
      "password": "c632a6ac63ec64dd2bec50c1535e96d21c7ab3335eb7a5c488326a3ec6c6e430",
      "username": "elza510",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Emelie",
      "id": "53",
      "lastname": "Schamberger",
      "password": "96844bc86a7b7c7f058c0a6ae141c162f33ddfca412f2d5899ead8ee713d7418",
      "username": "emelie578",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Emilia",
      "id": "90",
      "lastname": "Marks",
      "password": "469cc643a19fb75901e5d331b8dc14befa8b98810b246c2fb22fff0c382dc39e",
      "username": "emilia189",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Emmet",
      "id": "12",
      "lastname": "Boyle",
      "password": "8405ae6de3ebde2abffb2531d437a163a31dc42a109c7369b66b93258c7e1d67",
      "username": "emmet741",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector after 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Angeline",
      "id": "39",
      "lastname": "Tremblay",
      "password": "928748d0d4126492733ed8f2c522ed8fa84aa642c1c6a04e7d641476bfbd3e0c",
      "username": "angeline447",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Annabel",
      "id": "1",
      "lastname": "Bergstrom",
      "password": "8fed8061e1e33d96169b9026605172a8fe21eb1ce51756187195be0330536fb7",
      "username": "annabel711",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Anne",
      "id": "84",
      "lastname": "Wyman",
      "password": "49321648dc8383b8ba73c037dbcdb14873222077d3709bffe454100e5f809773",
      "username": "anne750",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Antone",
      "id": "69",
      "lastname": "Schmitt",
      "password": "f056b8cae37dc3ed60ee52da9a2951f8a6c531fe3222a3ad6835dbdd905c7d2a",
      "username": "antone347",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Antonia",
      "id": "46",
      "lastname": "Gutkowski",
      "password": "9dab09bbccf2cc2c187d7df4c5fc5326ebb050aac7d351284a079529e6e5637b",
      "username": "antonia919",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Antonina",
      "id": "99",
      "lastname": "Lesch",
      "password": "863a6b632034d24c2d404f944dde121158683787b89cd065fd00d5fa76f68853",
      "username": "antonina448",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Anya",
      "id": "2",
      "lastname": "Conn",
      "password": "0ba4c26f03ae3c7c7a85bf4204539884e52a0e1e511aeaf11d3b2fd627b5957d",
      "username": "anya543",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Araceli",
      "id": "26",
      "lastname": "Lind",
      "password": "10a3d43aba9613d935422f749c8cb2751db62090e246894a3e96407498e5ce22",
      "username": "araceli794",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Arlie",
      "id": "34",
      "lastname": "Kemmer",
      "password": "80c980ff9125cd274a3a1cd88cd9dfa4ba0bec9c6336182c78095a90db65b1de",
      "username": "arlie128",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Athena",
      "id": "15",
      "lastname": "Stamm",
      "password": "09b47655056ff5f96694fd9ea16b86998c853046ca7adc60587fa152c02f7b4b",
      "username": "athena557",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector before + filter 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Edward",
      "id": "8",
      "lastname": "Dach",
      "password": "5f53b0a2be22e28dc4b056f663910c046a33f9b2d779eaf997ea771fe1881a13",
      "username": "edward969",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Eladio",
      "id": "58",
      "lastname": "Botsford",
      "password": "4d8e7438a0573b2895ab0f49fe82596b564e8ba985bc8be657ac764bbd0d7895",
      "username": "eladio832",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Ella",
      "id": "103",
      "lastname": "Roberts",
      "password": "f056b8cae37dc3ed60ee52da9a2951f8a6c531fe3222a3ad6835dbdd905c7d2a",
      "username": "ella377",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Elza",
      "id": "98",
      "lastname": "Gorczany",
      "password": "c632a6ac63ec64dd2bec50c1535e96d21c7ab3335eb7a5c488326a3ec6c6e430",
      "username": "elza510",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector before 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Aida",
      "id": "24",
      "lastname": "Lakin",
      "password": "f22e89c251e50eec7c9e184f5584b99fdf48fdbde7317acd6388ce05ea691a43",
      "username": "aida285",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Alice",
      "id": "31",
      "lastname": "Howell",
      "password": "5ad1ebea0aafeb88c3114324ceb91db18605e498e476a787b5c2d2aec09d31e0",
      "username": "alice157",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Alva",
      "id": "42",
      "lastname": "Jacobson",
      "password": "72ddd2cc4594aa1134b8eaa9da845a31e70ad31ef81b0968f6d58b310c9a9926",
      "username": "alva280",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Alvera",
      "id": "72",
      "lastname": "Miller",
      "password": "87143c4a0ff67290eb9f0b0098e015e27dc06bd527a5010ccd04265b69320bcc",
      "username": "alvera707",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector mutli-key after + before 1`] = `
Object {
  "data": Array [
    Object {
      "confirmedAt": null,
      "firstname": "Joel",
      "id": "95",
      "lastname": "Lakin",
      "password": "c6520201ad739678e8e86c983c072c1fd95dba3b98d5023e40a8d895924b429f",
      "username": "joel356",
    },
    Object {
      "confirmedAt": null,
      "firstname": "Jonathon",
      "id": "67",
      "lastname": "Gusikowski",
      "password": "11e91a3f6d8635f3d7aa79678c64bde99e94d2a5f8276403e7e1917e0118fb1c",
      "username": "jonathon586",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector time-based after + first: id: 7 1`] = `
Object {
  "data": Array [
    Object {
      "author": "54",
      "board": "43",
      "content": "fugiat quis a a debitis et culpa",
      "id": "20",
      "writtenAt": 2018-03-26T20:47:46.578Z,
    },
    Object {
      "author": "78",
      "board": "30",
      "content": "expedita eveniet dicta deleniti aut distinctio molestiae 😆",
      "id": "40",
      "writtenAt": 2018-03-26T20:47:46.578Z,
    },
    Object {
      "author": "88",
      "board": "26",
      "content": "enim vel et rem labore amet recusandae 🙌",
      "id": "38",
      "writtenAt": 2018-03-26T20:47:46.556Z,
    },
    Object {
      "author": "25",
      "board": "48",
      "content": "deserunt voluptates eum aut libero nam sit 🚀",
      "id": "48",
      "writtenAt": 2018-03-26T20:47:46.519Z,
    },
    Object {
      "author": "28",
      "board": "13",
      "content": "et ut qui eum et consequatur numquam 😆",
      "id": "47",
      "writtenAt": 2018-03-26T20:47:46.480Z,
    },
    Object {
      "author": "59",
      "board": "12",
      "content": "ut distinctio sint dolores ut est corrupti",
      "id": "29",
      "writtenAt": 2018-03-26T20:47:46.422Z,
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector time-based after + first: id: 20 1`] = `
Object {
  "data": Array [
    Object {
      "author": "78",
      "board": "30",
      "content": "expedita eveniet dicta deleniti aut distinctio molestiae 😆",
      "id": "40",
      "writtenAt": 2018-03-26T20:47:46.578Z,
    },
    Object {
      "author": "88",
      "board": "26",
      "content": "enim vel et rem labore amet recusandae 🙌",
      "id": "38",
      "writtenAt": 2018-03-26T20:47:46.556Z,
    },
    Object {
      "author": "25",
      "board": "48",
      "content": "deserunt voluptates eum aut libero nam sit 🚀",
      "id": "48",
      "writtenAt": 2018-03-26T20:47:46.519Z,
    },
    Object {
      "author": "28",
      "board": "13",
      "content": "et ut qui eum et consequatur numquam 😆",
      "id": "47",
      "writtenAt": 2018-03-26T20:47:46.480Z,
    },
    Object {
      "author": "59",
      "board": "12",
      "content": "ut distinctio sint dolores ut est corrupti",
      "id": "29",
      "writtenAt": 2018-03-26T20:47:46.422Z,
    },
    Object {
      "author": "65",
      "board": "37",
      "content": "voluptatem vero optio mollitia et qui nihil",
      "id": "11",
      "writtenAt": 2018-03-26T20:47:46.084Z,
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector time-based after + first: id: 40 1`] = `
Object {
  "data": Array [
    Object {
      "author": "88",
      "board": "26",
      "content": "enim vel et rem labore amet recusandae 🙌",
      "id": "38",
      "writtenAt": 2018-03-26T20:47:46.556Z,
    },
    Object {
      "author": "25",
      "board": "48",
      "content": "deserunt voluptates eum aut libero nam sit 🚀",
      "id": "48",
      "writtenAt": 2018-03-26T20:47:46.519Z,
    },
    Object {
      "author": "28",
      "board": "13",
      "content": "et ut qui eum et consequatur numquam 😆",
      "id": "47",
      "writtenAt": 2018-03-26T20:47:46.480Z,
    },
    Object {
      "author": "59",
      "board": "12",
      "content": "ut distinctio sint dolores ut est corrupti",
      "id": "29",
      "writtenAt": 2018-03-26T20:47:46.422Z,
    },
    Object {
      "author": "65",
      "board": "37",
      "content": "voluptatem vero optio mollitia et qui nihil",
      "id": "11",
      "writtenAt": 2018-03-26T20:47:46.084Z,
    },
    Object {
      "author": "88",
      "board": "47",
      "content": "voluptatum eius deleniti et consequatur qui architecto 😀",
      "id": "12",
      "writtenAt": 2018-03-26T20:47:45.854Z,
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`cursor via connector time-based before + last: id: 7 1`] = `
Object {
  "data": Array [
    Object {
      "author": "88",
      "board": "47",
      "content": "voluptatum eius deleniti et consequatur qui architecto 😀",
      "id": "12",
      "writtenAt": 2018-03-26T20:47:45.854Z,
    },
    Object {
      "author": "65",
      "board": "37",
      "content": "voluptatem vero optio mollitia et qui nihil",
      "id": "11",
      "writtenAt": 2018-03-26T20:47:46.084Z,
    },
    Object {
      "author": "59",
      "board": "12",
      "content": "ut distinctio sint dolores ut est corrupti",
      "id": "29",
      "writtenAt": 2018-03-26T20:47:46.422Z,
    },
    Object {
      "author": "28",
      "board": "13",
      "content": "et ut qui eum et consequatur numquam 😆",
      "id": "47",
      "writtenAt": 2018-03-26T20:47:46.480Z,
    },
    Object {
      "author": "25",
      "board": "48",
      "content": "deserunt voluptates eum aut libero nam sit 🚀",
      "id": "48",
      "writtenAt": 2018-03-26T20:47:46.519Z,
    },
    Object {
      "author": "88",
      "board": "26",
      "content": "enim vel et rem labore amet recusandae 🙌",
      "id": "38",
      "writtenAt": 2018-03-26T20:47:46.556Z,
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`cursor via connector time-based before + last: id: 20 1`] = `
Object {
  "data": Array [
    Object {
      "author": "65",
      "board": "37",
      "content": "voluptatem vero optio mollitia et qui nihil",
      "id": "11",
      "writtenAt": 2018-03-26T20:47:46.084Z,
    },
    Object {
      "author": "59",
      "board": "12",
      "content": "ut distinctio sint dolores ut est corrupti",
      "id": "29",
      "writtenAt": 2018-03-26T20:47:46.422Z,
    },
    Object {
      "author": "28",
      "board": "13",
      "content": "et ut qui eum et consequatur numquam 😆",
      "id": "47",
      "writtenAt": 2018-03-26T20:47:46.480Z,
    },
    Object {
      "author": "25",
      "board": "48",
      "content": "deserunt voluptates eum aut libero nam sit 🚀",
      "id": "48",
      "writtenAt": 2018-03-26T20:47:46.519Z,
    },
    Object {
      "author": "88",
      "board": "26",
      "content": "enim vel et rem labore amet recusandae 🙌",
      "id": "38",
      "writtenAt": 2018-03-26T20:47:46.556Z,
    },
    Object {
      "author": "7",
      "board": "26",
      "content": "velit magnam nobis aspernatur corporis voluptas sed 😀",
      "id": "7",
      "writtenAt": 2018-03-26T20:47:46.578Z,
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;

exports[`cursor via connector time-based before + last: id: 40 1`] = `
Object {
  "data": Array [
    Object {
      "author": "59",
      "board": "12",
      "content": "ut distinctio sint dolores ut est corrupti",
      "id": "29",
      "writtenAt": 2018-03-26T20:47:46.422Z,
    },
    Object {
      "author": "28",
      "board": "13",
      "content": "et ut qui eum et consequatur numquam 😆",
      "id": "47",
      "writtenAt": 2018-03-26T20:47:46.480Z,
    },
    Object {
      "author": "25",
      "board": "48",
      "content": "deserunt voluptates eum aut libero nam sit 🚀",
      "id": "48",
      "writtenAt": 2018-03-26T20:47:46.519Z,
    },
    Object {
      "author": "88",
      "board": "26",
      "content": "enim vel et rem labore amet recusandae 🙌",
      "id": "38",
      "writtenAt": 2018-03-26T20:47:46.556Z,
    },
    Object {
      "author": "7",
      "board": "26",
      "content": "velit magnam nobis aspernatur corporis voluptas sed 😀",
      "id": "7",
      "writtenAt": 2018-03-26T20:47:46.578Z,
    },
    Object {
      "author": "54",
      "board": "43",
      "content": "fugiat quis a a debitis et culpa",
      "id": "20",
      "writtenAt": 2018-03-26T20:47:46.578Z,
    },
  ],
  "pageInfo": Object {
    "hasNextPage": false,
    "hasPreviousPage": true,
  },
}
`;
